--- a/fattoamanomenu.html
+++ b/fattoamanomenu.html
@@ -149,7 +149,7 @@
             <div class="footer-contact">
                 <a class="fc-text">Contact</a>
                 <dt class="fcontact-info">(513)316-0498</dt>
-                <dt class="fcontact-info"><a href="mailto:elegantbitecatering@hotmail.com" class="fcontact-info">Elegantbitecatering@hotmail.com</a></dt>
+                <dt class="fcontact-info"><a href="mailto:info@elegantbitecatering.com" class="fcontact-info">info@elegantbitecatering.com</a></dt>
                 <dt class="fcontact-info">Butler County, Ohio</dt>
                 <a href="https://twitter.com/FattoaManoOhio"><i class="fa-brands fa-x-twitter" style="font-size:28px;color:white"></i></a>
                 <a href="https://bsky.app/profile/elegantbitecatering.com"><i class="fa-brands fa-bluesky" style="font-size:28px;color:white"></i></a>
@@ -186,4 +186,5 @@
     </footer>
     </body>
 </html>
+
 
