--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 <div class="ct-container">
                     <a class="contact-text">Get In Touch</a>
                     <dt class="ct-info">Cell (513)316-0498</dt>
-                    <dt class="ct-info">Email: Elegantbitecatering@hotmail.com</dt>
+                    <dt class="ct-info">Email: info@elegantbitecatering.com</dt>
                 </div>
             </div>
         </div>
@@ -76,7 +76,7 @@
             <div class="footer-contact">
                 <a class="fc-text">Contact</a>
                 <dt class="fcontact-info">(513)316-0498</dt>
-                <dt class="fcontact-info"><a href="mailto:elegantbitecatering@hotmail.com" class="fcontact-info">info@elegantbitecatering.com</a></dt>
+                <dt class="fcontact-info"><a href="mailto:info@elegantbitecatering.com" class="fcontact-info">info@elegantbitecatering.com</a></dt>
                 <dt class="fcontact-info">Butler County, Ohio</dt>
             </div>
             <div class="footer-links">
@@ -109,4 +109,5 @@
     </footer>
 </body>
 </html>
+
 
