--- a/privacy.html
+++ b/privacy.html
@@ -119,7 +119,7 @@
                 <div class="footer-contact">
                     <a class="fc-text">Contact</a>
                     <dt class="fcontact-info">(513)316-0498</dt>
-                    <dt class="fcontact-info"><a href="mailto:elegantbitecatering@hotmail.com" class="fcontact-info">Elegantbitecatering@hotmail.com</a></dt>
+                    <dt class="fcontact-info"><a href="mailto:info@elegantbitecatering.com" class="fcontact-info">info@elegantbitecatering.com</a></dt>
                     <dt class="fcontact-info">Butler, Ohio</dt>
                 </div>
                 <div class="footer-links">
@@ -152,3 +152,4 @@
         </footer>
     </body>
 </html>
+
